# david-gestiondeservicios-0001-ws

./: .env.example  .gitignore  Dockerfile  README.md  README_CUSTOM_VALIDATION.md  README_TOKEN_APP_TO_APP.md  alembic.ini  bun.lockb  commitlint.config.mjs  package.json  pyproject.toml  railway.toml  scripts.py  setup.cfg
.cursor/: index.mdc
.cursor/rules/: api-get-endpoints-pattern.mdc  cursor-rules-creation-guide.mdc  git-commit-generation.mdc
.husky/: commit-msg
alembic/: env.py
alembic/versions/: 51287008dbc4_chore_inital_db_user_with_models.py  585ae0dc9ba0_chore_inital_db_user.py  599e7fe6fccd_chore_inital_db_user_with_models.py  6228995a9ed1_chore_inital_db_user.py
app/: __init__.py  config.py  constants.py  database.py  main.py
app/modules/appointment/application/commands/: __init__.py
app/modules/appointment/application/request/: create_appointment_request.py  update_appointment_request.py
app/modules/appointment/application/utils/: appointment_validation_utils.py
app/modules/appointment/domain/entities/: appointment_domain.py
app/modules/appointment/domain/repositories/: appointment_repository.py
app/modules/appointment/infra/repositories/: appointment_implementation_repository.py
app/modules/auth/application/: app_to_app_use_cases.py
app/modules/auth/domain/entities/: app_to_app_token_domain.py
app/modules/notifications/: __init__.py
app/modules/notifications/domain/: notification_location_entity.py
app/modules/share/aplication/: shaping.py
app/modules/share/domain/: exceptions.py  schemas.py
app/modules/share/infra/: custom_validation_handler.py  di_config.py  exception_handlers.py  mediator_config.py
app/modules/share/infra/email/: __init__.py  (+1 more)
app/modules/share/utils/: handle_dbapi_error.py  json_to_objects.py  mapper.py
app/modules/test/presentation/: __init__.py
app/templates/: api_docs_index.html
app/versions/: v1_app.py  v2_app.py
config/: setting.py
docs/Get_list_entities/: flow_get_list_entities.excalidraw
initial_data/: seed_data_initial.py
(+188 files in other folders)
