[tool.poetry]
name = "app"
version = "0.1.0"
description = "Aplicacion Web Service para la gestion de servicios de la barberia David"
authors = ["Esteban Villantoy <villantoyesteban@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]
include = ["app/templates/**/*"]


[tool.poetry.scripts]
format = "scripts:format"
lint = "scripts:lint"
typecheck = "scripts:typecheck"
dev = "scripts:dev"
migration = "scripts:migrations"
seed_initial_data = "scripts:seed_initial_data"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.0" }
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
google-auth = "^2.35.0"
requests = "^2.32.3"
mediatr = "^1.3.2"
injector = "^0.22.0"
python-multipart = "^0.0.20"
cloudinary = "^1.43.0"
python-dotenv = "^1.1.1"
greenlet = "^3.2.4"
httpx = "^0.28.1"
pandas = "^2.3.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
click = "^8.1.7"
alembic = "^1.13.2"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
